# choosi

./: .gitignore  .gitmodules  README.md  environment.yml  pyproject.toml  setup.py
benchmarks/: CNMvsNMBenchmark.ipynb
choosi/: __init__.py  barrier.py  choosir.py  distr.py  lasso.py  optimizer.py
choosi/benchmarks/: CNMvsNMBenchmark.ipynb
choosi/src/: choosi.cpp  decl.hpp  distr.cpp  matrix.cpp  optimization.cpp
choosi/src/include/: core.hpp
choosi/src/include/choosi_core/optimization/: qp_barrier_cqn.hpp
data/: master_phe.csv
tests/: test_distr.py  test_lasso.py  test_matrix.py  test_optimizer.py  test_qnm.py
